--- a/configs/gatherer.example.yaml
+++ b/configs/gatherer.example.yaml
@@ -14,15 +14,9 @@ api:
   # rest_url: https://api.elections.kalshi.com/trade-api/v2
   # ws_url: wss://api.elections.kalshi.com
 
-# Database connections
+# Database connection (TimescaleDB for time-series data)
+# Note: Market metadata lives in-memory (Market Registry), no PostgreSQL needed
 database:
-  postgres:
-    host: localhost
-    port: 5432
-    name: kalshi_gatherer
-    user: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
-    max_conns: 10
   timescale:
     host: localhost
     port: 5432
